--- a/RunningGame/RunningGame.csproj
+++ b/RunningGame/RunningGame.csproj
@@ -257,6 +257,12 @@
   <ItemGroup>
     <None Include="Resources\scream.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\unedited_joystick.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\edited_joystick.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
